[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[lib]
path = "./src/lib.rs"
name = "interpreter"

[dependencies]
anyhow = "1.0.68"                                # error handling
arrayvec = "0.7.6"
bytes = "1.3.0"                                  # helps manage buffers
derive_more = {version = "2.1.1", features = ["display", "from", "try_into"]}
hashbrown = "0.16.1"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "1.0.38"                             # error handling

[profile.release]
debug = true
